--- a/composer.json
+++ b/composer.json
@@ -10,27 +10,15 @@
     ],
     "repositories": [
       {
-        "type": "package",
-        "package": {
-          "name": "opencart/opencart",
-          "version": "2.0.3.1",
-          "dist": {
-            "url": "https://github.com/opencart/opencart/archive/2.0.3.1.zip",
-            "type": "zip"
-          },
-          "source": {
-            "url": "https://github.com/opencart/opencart",
-            "type": "git",
-            "reference": "254ab46051fb3cc936c8c5327909e319e3d9ca99"
-          }
-        }
+        "type" : "vcs" ,
+        "url" : "https://github.com/opencart/opencart"
       }
     ],
     "require-dev": {
-      "opencart/opencart" : "2.0.*",
+      "opencart/opencart" : "2.2.0.0",
       "vlucas/phpdotenv": "~1.1.0",
       "phpunit/phpunit" : "4.*",
-      "codegyre/robo": "^0.5.2"
+      "codegyre/robo": "*"
     },
     "config": {
       "bin-dir": "bin/",
