--- a/.env.sample
+++ b/.env.sample
@@ -10,6 +10,7 @@ OC_USERNAME=admin
 OC_PASSWORD=admin
 OC_EMAIL=you@example.com
 
-# Local Server Port
-# The hostname and port (8000 if omitted) are passed to PHP's Built-in web server. The trailing / is required for OpenCart's installer
+# Server Specification
+# The hostname and port (80 if omitted) are passed to PHP's Built-in web server. The trailing / is required for OpenCart's installer
 SERVER_PORT=8000
+SERVER_URL=opencart.local
