--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
       "opencart/opencart" : "2.2.0.0",
       "vlucas/phpdotenv": "~1.1.0",
       "phpunit/phpunit" : "4.*",
-      "codegyre/robo": "*"
+      "codegyre/robo": "*",
+      "beyondit/opencart-test-suite": "^0.3.0"
     },
     "config": {
       "bin-dir": "bin/",
