--- a/.env.sample
+++ b/.env.sample
@@ -13,4 +13,4 @@ OC_EMAIL=you@example.com
 # Server Specification
 # The hostname and port (80 if omitted) are passed to PHP's Built-in web server. The trailing / is required for OpenCart's installer
 SERVER_PORT=8000
-SERVER_URL=opencart.local
+SERVER_URL=http://localhost
